# kasane

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  pyproject.toml
scripts/: audit_memory_quality.py  benchmark_search.py
src/kasane/: chunker.py  embedder.py  main.py  mcp_server.py  search.py  storage.py
systemd/: kasane-codex-watch.service  kasane-opencode-watch.service
tests/: test_audit_memory_quality.py  test_chunker.py  test_main.py  test_search.py  test_storage.py
tests/fixtures/: claude_code_transcript.jsonl  codex_environment_context_transcript.jsonl  sample_transcript.jsonl
