[project]
name = "kasane"
version = "0.1.0"
description = "Claude Code 長期記憶システム"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.0",
]

[project.scripts]
kasane = "kasane.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kasane"]

[tool.pytest.ini_options]
testpaths = ["tests"]